--- a/README.adoc
+++ b/README.adoc
@@ -11,6 +11,16 @@ XCL is a new cryptocurrency project that, learning from the previous Blockchain 
 
 The XCL platform combines low latencies (single digit millisecond), IoT transaction rates (millions/s), open source AI volatility controls and blockchain for transfer of value and exchange of value for virtual fiat and crypto currencies. This system could be extended to other asset classes such as securities and fixed income. It uses a federated services model and regionalized payment systems making it more scalable than a blockchain which requires global consensus.
 
+=== Use cases
+
+The main use cases we support are
+
+- distributed transaction ledger
+- settlement of payment
+- matching and settlement of exchange of value e.g. fiat or digital currencies.
+
+=== The platform uses
+
 The platform makes use of https://github.com/OpenHFT/Chronicle-Salt/blob/master/README.adoc[Chronicle-Salt] for encryption and https://github.com/OpenHFT/Chronicle-Bytes[Chronicle-Bytes]. Chronicle Bytes contains all the low level memory access wrappers. It is built on Chronicle Core’s direct memory and OS system call access.
 
 Chronicle Bytes has a similar purpose to Java NIO’s ByteBuffer with some extensions.
